--- a/src/components/NotebookPage/Editor/index.css
+++ b/src/components/NotebookPage/Editor/index.css
@@ -409,3 +409,12 @@ span.image-attachment-icon {
 .ql-tooltip.ql-editing {
     left: 10px !important;
 }
+
+button.trash-note-icon {
+    top: 1px !important;
+    font-size: 14px !important;
+}
+button.ql-clean {
+    position: relative !important;
+    top: 1.5px !important;
+}
