--- a/src/components/NotebookPage/Editor/index.css
+++ b/src/components/NotebookPage/Editor/index.css
@@ -255,7 +255,7 @@
 }
 
 /* Set default font-family */
-#quill-container {
+#quill-container, #preview-note-editor {
     font-family: "Raleway";
     font-size: 16px;
 }
