--- a/src/components/NotebookPage/Editor/index.css
+++ b/src/components/NotebookPage/Editor/index.css
@@ -418,3 +418,11 @@ button.ql-clean {
     position: relative !important;
     top: 1.5px !important;
 }
+
+h1 > * {
+    font-size: 2rem !important;
+}
+
+h2 > * {
+    font-size: 1.5rem !important;
+}
