--- a/src/index.css
+++ b/src/index.css
@@ -744,7 +744,9 @@ div.add-tag {
 
 span.tag-pill {
   border: 1px solid #ced4da;
-  padding: 5px;
+  background-color: #fff;
+  color: #444444;
+  padding: 5px 7px;
   margin-right: 5px;
   margin-top: 10px;
 }
