Remove scrollbar from main editor page

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ div.notebooks-search-filter-list::-webkit-scrollbar {
   width: 5px;
 }
 
-div.sidebar-extension-sm::-webkit-scrollbar {
+div.sidebar-extension-sm::-webkit-scrollbar,
+div.main-content::-webkit-scrollbar {
   width: 0px;
 }
 
@@ -28,7 +29,7 @@ div.sidebar-extension-sm::-webkit-scrollbar {
 /* Show scrollbar only when element is hovered over  */
 div.notes-index:hover::-webkit-scrollbar-thumb,
 div.preview-note:hover::-webkit-scrollbar-thumb,
-div.main-content:hover::-webkit-scrollbar-thumb,
+/* div.main-content:hover::-webkit-scrollbar-thumb, */
 div.notebooks-search-filter-list:hover::-webkit-scrollbar-thumb {
   background-color: #d3d3d3;
 }
